fix scrollbar overflow issue on chrome

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -8,6 +8,10 @@
     --accent: #ff8c00;
 }
 
+html {
+    scrollbar-gutter: stable;
+}
+
 body {
     margin: 0;
     font-family: "Noto Sans", sans-serif;
